<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <LinearLayout
        android:id="@+id/top_area"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/main_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="38dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/back"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goCompass"
            android:scaleType="centerInside"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/settings_title"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|top"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_area">

        <View
            android:id="@+id/div_area2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_db"
            android:background="@drawable/btn_bg_clr"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:clickable="true"
            android:onClick="goDB"
            android:focusable="true" />

        <View
            android:id="@+id/div_area3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@drawable/btn_bg_clr"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:clickable="true"
            android:onClick="goLogin"
            android:focusable="true" />

        <View
            android:id="@+id/div_area4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/div_area"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/developers"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/pashin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:text="@string/pashin_alexander"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/karpov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:text="@string/karpov_maxim"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/contact_us"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:text="@string/email"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>