<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DBActivity">

    <LinearLayout
        android:id="@+id/top_area"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/main_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="38dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/back"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goInfo"
            android:scaleType="centerInside"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/btn_db"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start|top"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/action_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_area">

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/div_area"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/id"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:layout_weight="20" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:layout_weight="60" />

            <EditText
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/count"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:layout_weight="20" />
        </LinearLayout>

        <View
            android:id="@+id/div_area1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/buttons_area"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:weightSum="3.02">

            <Button
                android:id="@+id/btn_insert"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_bg_clr"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_insert"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="insert"
                android:layout_weight="1" />

            <View
                android:id="@+id/div_buttons1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_bg_clr"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_update"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="update"
                android:layout_weight="1" />

            <View
                android:id="@+id/div_buttons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_bg_clr"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btn_delete"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="delete"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>